
  Note that class posing (the ``poseAsClass_`` class method) is not supported in 64-bit 
  mode. It is also not possible to create new protocols in 64-bit code. Neither are 
  supported by the 64-bit runtime APIs (that is, it is a restriction in Apple's 
  Objective-C 2.0 runtime).

- BUGFIX: It is now possible to override ``respondsToSelector:`` in Python.


Version 2.0.1 (...)
-------------------

- BUGFIX: don't crash when printing CF objects that are magic cookies.


Version 2.0 (LEOPARD, post WWDC07)
----------------------------------

- The basic infrastructure for playing nice in a GC host was added.

  This doesn't mean that PyObjC now actually plays nice with the ObjC 
  garbage collector, some more development and much more testing is 
  needed for that. 

  Even so, the end result is about as good as we have without GC, 
  programs won't make optimal use of GC because that would require
  surgery on the Python interpreter itself.

- The metadata returned by the ``__metadata__`` method is slightly changed
  to make it more compatible with the XML files.

- Some of the older metadata attributes, such as ``isAlloc`` and
  ``doesDonateRef`` were dropped. ``isAlloc`` isn't needed for anything but
  a number of now hardcoded methods (``+alloc`` and ``+allocWithZone:``),
  ``doesDonateRef`` is available through the new metadata mechanism.

- Fix a memory leak in the code that creates the python representation for
  method lists.

- Speed up framework loading due to three changes:

  1. Don't rescan the list of classes unless the framework actually defines
     new classes.

  2. The metadata loader now implemented in C.

  3. CF wrapper types (e.g. CGContextRef) no longer have methods 
     corresponding to global functions, the speed-hit for calculating
     these is too large.

- It is now conveniently possible to create instance variables with
  a specific type (e.g. without manually making up a encoded type
  string)::

  	class MyObject (NSObject):