@@ -1,6 +1,8 @@
 #ifndef PyObjC_COREFOUNDATION_H
 #define PyObjC_COREFOUNDATION_H
 
+extern PyObject* PyObjC_NSCFTypeClass;
+
 extern int PyObjCCFType_Setup(void);
 extern PyObject* PyObjCCFType_New(char* name, char* encoding, CFTypeID typeID);
 extern PyObject* PyObjCCF_NewSpecial(char* encoding, void* datum);
